--- a/packages/ai/package.json
+++ b/packages/ai/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@ai-sdk/gateway": "^1.0.14",
+    "@ai-sdk/google": "^2.0.51",
     "@ai-sdk/react": "^2.0.105",
     "@cadhy/types": "workspace:*",
     "ai": "^5.0.107",
