--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,9 +6,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "bun run generate-search-index && vite build",
     "preview": "vite preview",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "generate-search-index": "bun scripts/generate-search-index.ts"
   },
   "dependencies": {
     "@cadhy/ui": "workspace:*",
@@ -17,6 +18,7 @@
     "@mdx-js/mdx": "^3.1.1",
     "@mdx-js/react": "^3.1.1",
     "@mdx-js/rollup": "^3.1.1",
+    "@orama/orama": "^3.1.18",
     "@shikijs/rehype": "^3.19.0",
     "@tailwindcss/typography": "^0.5.19",
     "@vercel/speed-insights": "^1.3.1",
