--- a/apps/desktop/src-tauri/Cargo.toml
+++ b/apps/desktop/src-tauri/Cargo.toml
@@ -50,8 +50,11 @@ dirs = "5"
 hostname = "0.4"
 open = "5"
 
-# HTTP client for OAuth token refresh
+# HTTP client for OAuth token refresh and AI Gateway proxy
 reqwest = { version = "0.12", features = ["json"] }
+
+# Base64 encoding/decoding for image data
+base64 = "0.22"
 
 # Linux-specific dependencies for Wayland/X11 handling
 [target.'cfg(target_os = "linux")'.dependencies]
