chore: sync with remote and preserve local changes
- Synchronized with origin/main (commit 19aaa56)
- Added missing sonner dependency
- Resolved merge conflicts (HotkeySettings, SimpleSelectionBox)
- Preserved all local modifications to components and stores
- Updated UI components and factory implementations
- Fixed redundant role attribute in pagination component

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -132,9 +132,12 @@ jobs:
     name: Rust Checks
     needs: changes
     if: ${{ needs.changes.outputs.rust == 'true' }}
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
       - uses: actions/checkout@v4
+
+      - name: Install OCCT
+        run: brew install opencascade freetype libpng tbb
 
       - name: Setup Rust
         uses: dtolnay/rust-toolchain@stable
