--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -51,8 +51,10 @@
     "react-i18next": "^16.5.0",
     "react-resizable-panels": "^3.0.6",
     "recharts": "^3.6.0",
+    "sonner": "^2.0.7",
     "three": "^0.182.0",
     "three-mesh-bvh": "^0.9.4",
+    "three-stdlib": "^2.36.1",
     "zustand": "^5.0.0"
   },
   "devDependencies": {
