feat: implement real system metrics with Tauri backend
Backend (Rust):
- Added sysinfo dependency for real system monitoring
- Created get_system_metrics command with CPU, RAM, and GPU info
- Platform-specific GPU detection (macOS, Windows, Linux)
- Returns memory usage (used/total MB), CPU %, and GPU model

Frontend (React):
- Updated StatusBar to fetch metrics from Tauri every 2s
- Added CPU usage display with percentage
- Enhanced memory display with used/total format
- Added GPU info display with model name
- Removed broken performance.memory fallback

UI improvements:
- FPS, CPU%, RAM, and GPU now all visible in StatusBar
- Added tooltips for each metric
- Responsive truncation for long GPU names

--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -48,6 +48,7 @@
     "postprocessing": "^6.38.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-grab": "^0.0.94",
     "react-i18next": "^16.5.0",
     "react-resizable-panels": "^3.0.6",
     "recharts": "^3.6.0",
