--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -28,6 +28,7 @@
     "motion": "^12.1.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-grab": "^0.0.94",
     "react-router-dom": "^7.1.1",
     "remark-frontmatter": "^5.0.0",
     "remark-gfm": "^4.0.1",
